toggle mode on loading

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
 
-<head>
-    <title></title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-
-<body class="light-mode">
-
+  <body class="light-mode">
     <h3>PDF DARKMODE</h3>
     <div id="toogle-btn-container">
-        <label class="switch btn-color-mode-switch">
-            <input type="checkbox" name="color_mode" id="color_mode" value="1">
-            <label for="color_mode" data-on="Dark" data-off="Light" class="btn-color-mode-switch-inner"></label>
-        </label>
+      <label class="switch btn-color-mode-switch">
+        <input type="checkbox" name="color_mode" id="color_mode" value="1" />
+        <label
+          for="color_mode"
+          data-on="Dark"
+          data-off="Light"
+          class="btn-color-mode-switch-inner"
+        ></label>
+      </label>
     </div>
 
     <script type="text/javascript" src="popup.js"></script>
-</body>
-
+  </body>
 </html>
